kubernetes/srs/srs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srs
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srs
      version: "v1"
  template:
    metadata:
      labels:
        app: srs
        version: "v1"
    spec:
      containers:
      - name: srs-app
        image: srs
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8081
        readinessProbe:
          httpGet:
            path: /srs/management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /srs/management/health
            port: http
          initialDelaySeconds: 120
