kubernetes/srs/srs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: srs
  namespace: default
  labels:
    app: srs
spec:
  selector:
    app: srs
  ports:
  - name: http
    port: 8081
