kubernetes/srs/srs-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: srs-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - srs.default.192.168.99.100.nip.io
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - srs.default.192.168.99.100.nip.io
#  - port:
#      number: 443
#      name: https
#      protocol: HTTPS
#    hosts:
#    - srs.default.192.168.99.100.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: srs-gw-virtualservice
  namespace: default
spec:
  hosts:
  - srs.default.192.168.99.100.nip.io
  gateways:
  - srs-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: srs
